--- a/app/src/main/res/layout/include_activity_header.xml
+++ b/app/src/main/res/layout/include_activity_header.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="100dp"
         android:gravity="center"
         android:visibility="gone"
-        android:textColor="@color/tc_main"
+        android:textColor="@color/text_color"
         android:textSize="@dimen/ts_title" />
 
     <ImageView
