--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -59,6 +59,7 @@
                 android:hint="@string/verification_code"
                 android:inputType="number"
                 android:maxLines="1"
+                android:maxLength="4"
                 android:paddingBottom="13dp"
                 android:paddingTop="13dp"
                 android:textColor="@color/text_color"
@@ -140,10 +141,9 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="51dp"
+        android:enabled="false"
         android:background="@mipmap/btn_unselected_long"
         android:gravity="center"
-        android:paddingBottom="13dp"
-        android:paddingTop="13dp"
         android:text="注册"
         android:textColor="@color/white"
         android:textSize="16sp" />
