--- a/app/src/main/res/layout/activity_user_agreement.xml
+++ b/app/src/main/res/layout/activity_user_agreement.xml
@@ -7,11 +7,14 @@
 
     <include layout="@layout/include_activity_header" />
 
+    <View android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/line_color"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textColor="#FF4A4A4A"
+        android:textColor="@color/text_color"
         android:textSize="15sp"
         android:layout_margin="20dp" />
 
