--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -3,13 +3,126 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".modular.internet.activity.NewAccountActivity">
-<include layout="@layout/include_activity_header"/>
+
+    <include layout="@layout/include_activity_header" />
+
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:paddingEnd="20dp"
+        android:paddingStart="20dp">
 
-        android:layout_height="50dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="@string/pay_cost_company"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/ts_content" />
 
+        <TextView
+            android:id="@+id/pay_cost_company"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:drawableEnd="@mipmap/right_arrow"
+            android:drawablePadding="10dp"
+            android:gravity="center"
+            android:text="北京燃气集团"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/ts_content" />
     </LinearLayout>
+
+    <View
+        style="@style/div_horizontal"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:paddingEnd="20dp"
+        android:paddingStart="20dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="@string/pay_account"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/ts_content" />
+
+        <EditText
+            android:id="@+id/pay_account"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            android:layout_weight="1"
+            android:background="@color/transparent"
+            android:gravity="center_vertical"
+            android:hint="@string/hint_input_pay_account"
+            android:lines="1"
+            android:textColor="@color/text_color"
+            android:textColorHint="@color/text_hint_color"
+            android:textSize="@dimen/ts_content" />
+
+        <TextView
+            android:id="@+id/input_account_help"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="15dp"
+            android:gravity="center"
+            android:text="@string/input_account_help"
+            android:textColor="@color/text_green_color"
+            android:textSize="@dimen/ts_content" />
+    </LinearLayout>
+
+    <View
+        style="@style/div_horizontal"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp" />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:gravity="center"
+        android:paddingEnd="20dp"
+        android:paddingStart="20dp"
+        android:paddingTop="10dp"
+        android:text="@string/input_account_alert"
+        android:textColor="@color/text_hint_color"
+        android:textSize="@dimen/ts_content" />
+
+    <CheckBox
+        android:id="@+id/protocol"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        android:button="@drawable/button_check_box_green"
+        android:checked="true"
+        android:gravity="center"
+        android:padding="8dp"
+        android:text="@string/read_and_agree_protocol"
+        android:textColor="@color/text_color"
+        android:textSize="@dimen/ts_content" />
+
+    <TextView
+        android:id="@+id/next_step"
+        android:layout_width="275dp"
+        android:layout_height="46dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:background="@color/text_green_color"
+        android:gravity="center"
+        android:text="下一步"
+        android:textColor="@color/white" />
 </LinearLayout>
