--- a/app/src/main/res/layout/include_activity_header.xml
+++ b/app/src/main/res/layout/include_activity_header.xml
@@ -9,16 +9,16 @@
         android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:visibility="gone"
-        android:scaleType="center" />
+        android:scaleType="center"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv_left"
         android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:visibility="gone"
-        android:gravity="center" />
+        android:gravity="center"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -28,23 +28,28 @@
         android:layout_marginEnd="100dp"
         android:layout_marginStart="100dp"
         android:gravity="center"
-        android:visibility="gone"
         android:textColor="@color/text_color"
-        android:textSize="@dimen/ts_title" />
+        android:textSize="@dimen/ts_title"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/iv_right"
         android:layout_width="50dp"
         android:layout_height="match_parent"
-        android:visibility="gone"
         android:layout_alignParentEnd="true"
-        android:scaleType="center" />
+        android:scaleType="center"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv_right"
         android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
-        android:visibility="gone"
-        android:gravity="center" />
+        android:gravity="center"
+        android:visibility="gone" />
+
+    <View
+        android:id="@+id/div_bottom"
+        style="@style/div_horizontal"
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
