--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="translucence">#66000000</color>
+    <color name="transparent">#00000000</color>
 
     <color name="text_color">#333333</color>
     <color name="text_hint_color">#FFCED2D8</color>
     <color name="line_color">#FFE6E6E6</color>
-    <color name="transparent">#00000000</color>
     <color name="text_gray_dark_color">#999999</color>
     <color name="text_gray_color">#FFCED2D8</color>
     <color name="text_green_color">#FF00BE8A</color>
