--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@null"
-                android:hint="@string/verification_code"
+                android:hint="@string/input_password"
                 android:inputType="number"
                 android:maxLength="4"
                 android:maxLines="1"
@@ -70,7 +70,8 @@
                 android:paddingBottom="13dp"
                 android:paddingTop="13dp"
                 android:text="@string/get_verification_code"
-                android:textColor="@color/text_gray_color" />
+                android:textColor="@color/text_gray_color"
+                android:visibility="gone" />
 
         </LinearLayout>
 
@@ -82,6 +83,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/btn_retrieve_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|end"
@@ -92,7 +94,7 @@
         android:textSize="12sp" />
 
     <Button
-        android:id="@+id/btn_register"
+        android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
@@ -106,6 +108,7 @@
         android:textSize="16sp" />
 
     <TextView
+        android:id="@+id/btn_login_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -149,6 +152,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/btn_wx_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
