--- a/app/src/main/res/layout/activity_binding_phone.xml
+++ b/app/src/main/res/layout/activity_binding_phone.xml
@@ -16,12 +16,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="30dp"
-        android:text="重置密码"
+        android:text="绑定手机号"
         android:textColor="@color/text_color"
         android:textSize="28sp" />
 
     <EditText
-        android:id="@+id/edit_reset_phone"
+        android:id="@+id/edit_binding_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
@@ -51,7 +51,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/edit_reset_code"
+                android:id="@+id/edit_binding_code"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -67,7 +67,7 @@
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/btn_reset_code"
+                android:id="@+id/btn_binding_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -87,55 +87,8 @@
     </LinearLayout>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/edit_reset_pwd"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@null"
-                android:hint="@string/pwd_prompt"
-                android:inputType="textPassword"
-                android:maxLength="20"
-                android:maxLines="1"
-                android:paddingBottom="13dp"
-                android:paddingTop="13dp"
-                android:textColor="@color/text_color"
-                android:textColorHint="@color/text_hint_color"
-                android:textSize="14sp" />
-
-            <ImageView
-                android:id="@+id/btn_pwd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:paddingBottom="10dp"
-                android:paddingLeft="15dp"
-                android:paddingTop="10dp"
-                android:src="@mipmap/pwd_close" />
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@drawable/et_underline" />
-    </LinearLayout>
-
     <Button
-        android:id="@+id/btn_confirm"
+        android:id="@+id/btn_binding_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
