--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,8 @@
     <color name="text_green_color">#FF00BE8A</color>
     <color name="white">#FFFFFFFF</color>
     <color name="btn_bg_gary">#FFE9E9E9</color>
+    <color name="text_blue_color">#007AFF</color>
+    <color name="home_selected_text">#FF00AE7E</color>
+    <color name="home_unselected_text">#FFAAAAAA</color>
+
 </resources>
