--- a/app/src/main/res/drawable/shape_solid_white.xml
+++ b/app/src/main/res/drawable/shape_solid_white.xml
@@ -8,7 +8,7 @@
 
     <stroke
         android:width="0.5dp"
-        android:color="@color/color_white"
+        android:color="@color/white"
         android:dashGap="0dp"
         android:dashWidth="0dp" />
 
