--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+
+    <com.cn.lib.weight.indicator.TabIndicatorView
+        android:id="@+id/layout_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        app:indicator_textColorNormal="@color/home_unselected_text"
+        app:indicator_textColorSelected="@color/home_selected_text"
+        app:indicator_textPaddingBottom="4dp"
+        app:indicator_textPaddingTop="4dp"
+        app:indicator_textSizeNormal="10sp" />
+
+
+  <com.cn.lib.weight.CustomViewPager
+      android:layout_above="@id/layout_tab"
+      android:id="@+id/view_pager"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
+
+
+</RelativeLayout>
