--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:textSize="28sp" />
 
     <EditText
-        android:id="@+id/edit_phone"
+        android:id="@+id/edit_login_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
@@ -24,7 +24,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/et_underline"
         android:hint="@string/phone_prompt"
-        android:inputType="number"
+        android:inputType="phone"
         android:maxLines="1"
         android:paddingBottom="13dp"
         android:paddingTop="13dp"
@@ -46,14 +46,14 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/edit_code"
+                android:id="@+id/edit_login_code"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@null"
                 android:hint="@string/input_password"
                 android:inputType="number"
-                android:maxLength="4"
+                android:maxLength="20"
                 android:maxLines="1"
                 android:paddingBottom="13dp"
                 android:paddingTop="13dp"
@@ -62,7 +62,7 @@
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/btn_code"
+                android:id="@+id/btn_login_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -113,7 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:text="密码登录"
+        android:text="验证码登录"
         android:textColor="@color/text_color"
         android:textSize="13sp" />
 
