--- a/app/src/main/res/layout/layout_prompt_dialog_horizontal.xml
+++ b/app/src/main/res/layout/layout_prompt_dialog_horizontal.xml
@@ -4,8 +4,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="40dp"
-    android:layout_marginRight="40dp"
     android:background="@drawable/shape_solid_white"
     android:orientation="vertical">
 
@@ -22,13 +20,13 @@
             android:gravity="center"
             android:padding="10dp"
             android:text="设置头像"
-            android:textColor="@color/default_txt_title_color"
+            android:textColor="@color/text_color"
             android:textSize="14sp"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            style="@style/default_line"/>
+            android:background="@color/line_color"/>
 
     </LinearLayout>
 
@@ -42,19 +40,19 @@
         android:paddingRight="20dp"
         android:layout_marginTop="20dp"
         android:text="是否删除该记录？"
-        android:textColor="@color/default_txt_sub_color"
+        android:textColor="@color/text_color"
         android:textSize="14sp"/>
 
     <View
         android:id="@+id/view1"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        style="@style/default_line"/>
+        android:background="@color/line_color"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:layout_height="50dp">
+        android:layout_height="44dp">
 
         <TextView
             android:layout_weight="1"
@@ -63,14 +61,14 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="取消"
-            android:textColor="@color/default_txt_main_color"
+            android:textColor="@color/text_blue_color"
             android:textSize="16sp"/>
 
         <View
             android:id="@+id/view2"
             android:layout_width="0.5dp"
             android:layout_height="wrap_content"
-            style="@style/default_line"/>
+            android:background="@color/line_color"/>
 
         <TextView
             android:id="@+id/dialog_hint_affirm"
@@ -79,7 +77,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="确定"
-            android:textColor="@color/default_blue_color"
+            android:textColor="@color/text_blue_color"
             android:textSize="18sp"/>
     </LinearLayout>
 </LinearLayout>
