--- a/app/src/main/res/layout/layout_prompt_dialog_vertical.xml
+++ b/app/src/main/res/layout/layout_prompt_dialog_vertical.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_transparent"
+    android:background="@color/translucence"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingEnd="10dp"
@@ -29,12 +29,12 @@
                 android:gravity="center"
                 android:padding="13dp"
                 android:text="设置头像"
-                android:textColor="@color/default_txt_main_color"
+                android:textColor="@color/text_color"
                 android:textSize="13sp" />
 
             <View
                 android:id="@+id/view1"
-                style="@style/default_line"
+                android:background="@color/line_color"
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp" />
         </LinearLayout>
@@ -46,12 +46,12 @@
             android:gravity="center"
             android:padding="15dp"
             android:text="是否删除该记录？"
-            android:textColor="@color/default_txt_sub_color"
+            android:textColor="@color/text_color"
             android:textSize="16sp" />
 
         <View
             android:id="@+id/view2"
-            style="@style/default_line"
+            android:background="@color/line_color"
             android:layout_width="match_parent"
             android:layout_height="0.5dp" />
 
@@ -63,7 +63,7 @@
             android:gravity="center"
             android:padding="15dp"
             android:text="确定"
-            android:textColor="@color/default_blue_color"
+            android:textColor="@color/text_blue_color"
             android:textSize="18sp" />
     </LinearLayout>
 
@@ -78,6 +78,6 @@
         android:gravity="center"
         android:padding="15dp"
         android:text="取消"
-        android:textColor="@color/default_txt_main_color"
+        android:textColor="@color/text_gray_color"
         android:textSize="18sp" />
 </LinearLayout>
