--- a/app/src/main/res/layout/activity_address_selector.xml
+++ b/app/src/main/res/layout/activity_address_selector.xml
@@ -8,7 +8,7 @@
 
     <include layout="@layout/include_activity_header" />
 
-    <EditText
+    <TextView
         android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="34dp"
