新增  缴费单位选择

--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -117,11 +117,11 @@
 
     <TextView
         android:id="@+id/next_step"
-        android:layout_width="275dp"
-        android:layout_height="46dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:background="@color/text_green_color"
+        android:background="@mipmap/btn_full_press"
         android:gravity="center"
         android:text="下一步"
         android:textColor="@color/white" />
