--- a/app/src/main/res/layout/item_company_select.xml
+++ b/app/src/main/res/layout/item_company_select.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_layout"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:background="@color/white">
 
     <TextView
-        android:id="@+id/address_name"
-        android:layout_width="match_parent"
+        android:id="@+id/company_name"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:paddingEnd="20dp"
@@ -14,6 +15,14 @@
         android:text="鞍山"
         android:textColor="@color/text_color"
         android:textSize="@dimen/ts_content" />
+
+    <ImageView
+        android:id="@+id/item_select"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|end"
+        android:layout_marginEnd="20dp"
+        android:src="@mipmap/icon_item_selector" />
 
     <View
         style="@style/div_horizontal"
