--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -100,7 +100,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="23dp"
-        android:background="@mipmap/btn_unselected_long"
+        android:background="@mipmap/btn_full_normal"
         android:enabled="false"
         android:gravity="center"
         android:text="登录"
