--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -142,7 +142,7 @@
         android:layout_marginRight="50dp"
         android:layout_marginTop="51dp"
         android:enabled="false"
-        android:background="@mipmap/btn_unselected_long"
+        android:background="@mipmap/btn_full_normal"
         android:gravity="center"
         android:text="注册"
         android:textColor="@color/white"
