--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,12 +5,14 @@
     <color name="colorAccent">#FF4081</color>
     <color name="translucence">#66000000</color>
     <color name="transparent">#00000000</color>
+    <color name="bg_red">#14FF0000</color>
 
     <color name="text_color">#333333</color>
     <color name="text_hint_color">#FFCED2D8</color>
     <color name="line_color">#FFE6E6E6</color>
     <color name="text_gray_dark_color">#999999</color>
     <color name="text_gray_color">#FFCED2D8</color>
+    <color name="text_color_red">#FF0000</color>
     <color name="text_green_color">#FF00BE8A</color>
     <color name="white">#FFFFFFFF</color>
     <color name="btn_bg_gary">#FFE9E9E9</color>
