--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="ts_title">17sp</dimen>
     <dimen name="ts_btn">16sp</dimen>
     <dimen name="ts_content">14sp</dimen>
+    <dimen name="ts_note">12sp</dimen>
 </resources>
