--- a/app/src/main/res/layout/layout_address_location_header.xml
+++ b/app/src/main/res/layout/layout_address_location_header.xml
@@ -15,6 +15,7 @@
         android:textSize="@dimen/ts_content" />
 
     <TextView
+        android:id="@+id/location_city"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
