--- a/app/src/main/res/layout/activity_address_selector.xml
+++ b/app/src/main/res/layout/activity_address_selector.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,8 +25,34 @@
         android:textColorHint="@color/text_hint_color"
         android:textSize="@dimen/ts_content" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+            android:id="@+id/refreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+
+        <cn.ygyg.cloudpayment.widget.SideBarView
+            android:id="@+id/sideBar"
+            android:layout_width="wrap_content"
+            android:layout_height="360dp"
+            android:layout_centerVertical="true"
+            app:sideBarWidth="30dp"
+            app:sideGravity="end"
+            app:sidePreviewBackgroundColor="@color/translucence"
+            app:sidePreviewRadius="5dp"
+            app:sidePreviewSize="80dp"
+            app:sidePreviewTextColor="@color/text_green_color"
+            app:sidePreviewTextSize="50sp"
+            app:sideTextColor="@color/text_green_color"
+            app:sideTextSize="10sp" />
+    </RelativeLayout>
 </LinearLayout>
