--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -65,8 +65,8 @@
             android:layout_weight="1"
             android:background="@color/transparent"
             android:gravity="center_vertical"
-            android:inputType="text"
             android:hint="@string/hint_input_pay_account"
+            android:inputType="text"
             android:lines="1"
             android:textColor="@color/text_color"
             android:textColorHint="@color/text_hint_color"
@@ -101,20 +101,44 @@
         android:textColor="@color/text_hint_color"
         android:textSize="@dimen/ts_content" />
 
-    <CheckBox
-        android:id="@+id/protocol"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        android:button="@drawable/button_check_box_green"
-        android:checked="true"
-        android:gravity="center"
-        android:padding="8dp"
-        android:text="@string/read_and_agree_protocol"
-        android:textColor="@color/text_color"
-        android:textSize="@dimen/ts_content" />
+        android:orientation="horizontal"
+        android:paddingEnd="20dp"
+        android:paddingStart="20dp">
+
+
+        <CheckBox
+            android:id="@+id/agree_protocol"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:button="@drawable/button_check_box_green"
+            android:checked="true"
+            android:gravity="center"
+            android:padding="4dp"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/ts_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="@string/read_and_agree"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/ts_content" />
+
+        <TextView
+            android:id="@+id/read_protocol"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="@string/protocol_title"
+            android:textColor="@color/text_green_color"
+            android:textSize="@dimen/ts_content" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/next_step"
