--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,4 +7,20 @@
         <attr name="border_overlay" format="boolean" />
     </declare-styleable>
 
+    <declare-styleable name="SideBarView">
+        <attr name="sideGravity" format="enum">
+            <enum name="start" value="1" />
+            <enum name="end" value="0" />
+        </attr>
+        <attr name="sideTextSize" format="dimension" />
+        <attr name="sideTextColor" format="color" />
+        <attr name="sideBarWidth" format="dimension" />
+
+        <attr name="sidePreviewSize" format="dimension" />
+        <attr name="sidePreviewRadius" format="dimension" />
+
+        <attr name="sidePreviewTextSize" format="dimension" />
+        <attr name="sidePreviewTextColor" format="color" />
+        <attr name="sidePreviewBackgroundColor" format="color" />
+    </declare-styleable>
 </resources>
