--- a/app/src/main/res/layout/dialog_search_address.xml
+++ b/app/src/main/res/layout/dialog_search_address.xml
@@ -42,9 +42,21 @@
 
     <View style="@style/div_horizontal" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/search_list"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/transparent" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/search_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white" />
+
+        <cn.ygyg.cloudpayment.widget.EmptyView
+            android:id="@+id/empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:visibility="gone" />
+    </FrameLayout>
 </LinearLayout>
