--- a/app/src/main/res/layout/layout_prompt_dialog_horizontal.xml
+++ b/app/src/main/res/layout/layout_prompt_dialog_horizontal.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/shape_solid_white"
@@ -21,12 +20,12 @@
             android:padding="10dp"
             android:text="设置头像"
             android:textColor="@color/text_color"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="@color/line_color"/>
+            android:background="@color/line_color" />
 
     </LinearLayout>
 
@@ -34,50 +33,50 @@
         android:id="@+id/dialog_hint_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:layout_marginTop="20dp"
         android:text="是否删除该记录？"
         android:textColor="@color/text_color"
-        android:textSize="14sp"/>
+        android:textSize="14sp" />
 
     <View
         android:id="@+id/view1"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/line_color"/>
+        android:background="@color/line_color" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="44dp">
+        android:layout_height="44dp"
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_weight="1"
-            android:layout_width="0dp"
             android:id="@+id/dialog_hint_cancel"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center"
             android:text="取消"
             android:textColor="@color/text_blue_color"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <View
             android:id="@+id/view2"
             android:layout_width="0.5dp"
             android:layout_height="wrap_content"
-            android:background="@color/line_color"/>
+            android:background="@color/line_color" />
 
         <TextView
             android:id="@+id/dialog_hint_affirm"
-            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center"
             android:text="确定"
             android:textColor="@color/text_blue_color"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
     </LinearLayout>
 </LinearLayout>
