--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -16,7 +16,7 @@
             android:scaleType="fitXY"
             android:src="@mipmap/bg_my"/>
 
-        <android.support.v7.widget.CardView
+        <com.cn.lib.widget.card.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -51,7 +51,7 @@
 
             </LinearLayout>
 
-        </android.support.v7.widget.CardView>
+        </com.cn.lib.widget.card.CardView>
 
     </RelativeLayout>
 
