--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -2,7 +2,8 @@
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/image_banner"
     android:layout_width="match_parent"
-    android:src="@mipmap/background_person"
-    android:layout_height="120dp">
+    android:layout_height="120dp"
+    android:scaleType="fitXY"
+    android:src="@mipmap/banner">
 
 </ImageView>
