--- a/app/src/main/res/layout/layout_first_recharge.xml
+++ b/app/src/main/res/layout/layout_first_recharge.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cn.lib.widget.card.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -30,7 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="57dp"
+            android:layout_marginLeft="20dp"
             android:layout_weight="1"
             android:text="@string/iot_card"
             android:textColor="@color/text_color"
@@ -49,4 +49,4 @@
             android:textSize="14sp" />
 
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</com.cn.lib.widget.card.CardView>
