--- a/app/src/main/res/layout/activity_binding_phone.xml
+++ b/app/src/main/res/layout/activity_binding_phone.xml
@@ -58,8 +58,8 @@
                 android:background="@null"
                 android:hint="@string/verification_code"
                 android:inputType="number"
-                android:maxLines="1"
                 android:maxLength="6"
+                android:maxLines="1"
                 android:paddingBottom="13dp"
                 android:paddingTop="13dp"
                 android:textColor="@color/text_color"
@@ -71,10 +71,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:enabled="false"
                 android:paddingBottom="13dp"
                 android:paddingTop="13dp"
                 android:text="@string/get_verification_code"
-                android:enabled="false"
                 android:textColor="@color/text_gray_color" />
 
         </LinearLayout>
@@ -94,11 +94,12 @@
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         android:layout_marginTop="51dp"
-        android:enabled="false"
         android:background="@mipmap/btn_full_normal"
+        android:enabled="false"
         android:gravity="center"
         android:text="完成"
         android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
