--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,27 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/transparent"
     android:orientation="vertical">
 
 
-    <com.cn.lib.weight.indicator.TabIndicatorView
-        android:id="@+id/layout_tab"
+
+        <com.cn.lib.weight.indicator.TabIndicatorView
+            android:id="@+id/layout_tab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:layout_alignParentBottom="true"
+            app:indicator_textColorNormal="@color/home_unselected_text"
+            app:indicator_textColorSelected="@color/home_selected_text"
+            app:indicator_textPaddingBottom="4dp"
+            app:indicator_textPaddingTop="4dp"
+            app:indicator_textSizeNormal="10sp" />
+
+
+    <com.cn.lib.widget.CustomViewPager
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        app:indicator_textColorNormal="@color/home_unselected_text"
-        app:indicator_textColorSelected="@color/home_selected_text"
-        app:indicator_textPaddingBottom="4dp"
-        app:indicator_textPaddingTop="4dp"
-        app:indicator_textSizeNormal="10sp" />
+        android:layout_height="match_parent"
+        android:layout_above="@id/layout_tab" />
 
-
-  <com.cn.lib.widget.CustomViewPager
-      android:layout_above="@id/layout_tab"
-      android:id="@+id/view_pager"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:layout_above="@id/layout_tab"
+        android:background="@drawable/shape_bottom_to_top_gradient" />
 
 
 </RelativeLayout>
