--- a/app/src/main/res/layout/layout_first_recharge.xml
+++ b/app/src/main/res/layout/layout_first_recharge.xml
@@ -44,6 +44,7 @@
             android:layout_marginRight="15dp"
             android:background="@mipmap/btn_recharge"
             android:gravity="center"
+            android:textStyle="bold"
             android:text="充值"
             android:textColor="@color/white"
             android:textSize="14sp" />
