--- a/app/src/main/res/layout/activity_user_agreement.xml
+++ b/app/src/main/res/layout/activity_user_agreement.xml
@@ -79,7 +79,7 @@
 八、附则\n
 \u3000\u30001、本协议的订立、执行和解释及争议的解决均应适用中华人民共和国法律。\n
 \u3000\u30002、如本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，本协议的其余条款仍应有效并且有约束。\n
-\u3000\u30003、本协议解释权及修订权归新奥阳光易采科技有限公司所有。\n"
+\u3000\u30003、本协议解释权及修订权归新奥阳光易采科技有限公司所有。\n\n"
             android:textColor="@color/text_color"
             android:textSize="15sp" />
 
