--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -148,6 +148,6 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/btn_bg_full"
         android:gravity="center"
-        android:text="下一步"
+        android:text="@string/commit"
         android:textColor="@color/white" />
 </LinearLayout>
