--- a/app/src/main/res/drawable/selector_stroke_gray_green.xml
+++ b/app/src/main/res/drawable/selector_stroke_gray_green.xml
@@ -9,7 +9,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="@color/text_gray_dark_color" />
+            <stroke android:width="1dp" android:color="@color/btn_bg_gary" />
             <corners android:radius="4dp" />
         </shape>
     </item>
