--- a/app/src/main/res/drawable/shape_stroke_gray.xml
+++ b/app/src/main/res/drawable/shape_stroke_gray.xml
@@ -2,12 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true">
         <shape>
-            <stroke android:width="0.5dp" android:color="@color/text_green_color" />
+            <stroke android:width="1dp" android:color="@color/text_green_color" />
+            <corners android:radius="5dp" />
         </shape>
     </item>
     <item>
         <shape>
-            <stroke android:width="0.5dp" android:color="@color/btn_bg_gary" />
+            <stroke android:width="1dp" android:color="@color/btn_bg_gary" />
+            <corners android:radius="5dp" />
         </shape>
     </item>
 </selector>
