--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -17,9 +17,8 @@
         android:paddingStart="20dp">
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="@string/pay_cost_company"
             android:textColor="@color/text_color"
@@ -27,11 +26,13 @@
 
         <TextView
             android:id="@+id/pay_cost_company"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            android:layout_weight="1"
             android:drawableEnd="@mipmap/right_arrow"
             android:drawablePadding="10dp"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:text="北京燃气集团"
             android:textColor="@color/text_color"
             android:textSize="@dimen/ts_content" />
@@ -57,7 +58,7 @@
             android:textColor="@color/text_color"
             android:textSize="@dimen/ts_content" />
 
-        <EditText
+        <cn.ygyg.cloudpayment.widget.CleanUpEditText
             android:id="@+id/pay_account"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -149,5 +150,7 @@
         android:background="@drawable/btn_bg_full"
         android:gravity="center"
         android:text="@string/commit"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:textSize="@dimen/ts_btn"
+        android:textStyle="bold" />
 </LinearLayout>
