--- a/app/src/main/res/layout/activity_new_account_success.xml
+++ b/app/src/main/res/layout/activity_new_account_success.xml
@@ -27,7 +27,7 @@
         android:gravity="center"
         android:text="@string/add_account_success"
         android:textColor="@color/text_color"
-        android:textSize="@dimen/ts_content" />
+        android:textSize="@dimen/ts_btn" />
 
     <TextView
         android:id="@+id/to_payments"
@@ -38,7 +38,8 @@
         android:gravity="center"
         android:text="@string/to_payments"
         android:textColor="@color/white"
-        android:textSize="@dimen/ts_btn" />
+        android:textSize="@dimen/ts_btn"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/back_to_main"
