--- a/app/src/main/res/layout/item_address_selector_title.xml
+++ b/app/src/main/res/layout/item_address_selector_title.xml
@@ -11,7 +11,7 @@
         android:paddingEnd="16dp"
         android:paddingStart="16dp"
         android:text="A"
-        android:textColor="@color/text_color"
+        android:textColor="@color/text_gray_dark_color"
         android:textSize="@dimen/ts_content" />
 
     <View
