--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="bg_red">#14FF0000</color>
 
     <color name="text_color">#333333</color>
-    <color name="text_hint_color">#FFCED2D8</color>
+    <color name="text_hint_color">#FFCCCCCC</color>
     <color name="line_color">#FFE6E6E6</color>
     <color name="text_gray_dark_color">#999999</color>
     <color name="text_gray_color">#FFCED2D8</color>
@@ -19,5 +19,6 @@
     <color name="text_blue_color">#007AFF</color>
     <color name="home_selected_text">#FF00AE7E</color>
     <color name="home_unselected_text">#FFAAAAAA</color>
+    <color name="div_wide">#FFE9E9E9</color>
 
 </resources>
