--- a/app/src/main/res/layout/item_payments_history.xml
+++ b/app/src/main/res/layout/item_payments_history.xml
@@ -68,7 +68,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:text="交易成功"
-                android:textColor="@color/selector_gray_green"
+                android:textColor="@color/text_green_color"
                 android:textSize="@dimen/ts_content" />
         </LinearLayout>
 
@@ -129,6 +129,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="15dp"
@@ -147,7 +148,6 @@
                 android:id="@+id/pay_time"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="16dp"
                 android:gravity="center_vertical"
                 android:text="2018.09.11 20:13"
                 android:textColor="@color/selector_gray_green"
