--- a/app/src/main/res/layout/dialog_company_select.xml
+++ b/app/src/main/res/layout/dialog_company_select.xml
@@ -48,6 +48,8 @@
         android:background="@mipmap/btn_full_press"
         android:gravity="center"
         android:text="@string/confirm"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:textSize="@dimen/ts_btn"
+        android:textStyle="bold" />
 
 </LinearLayout>
