--- a/app/src/main/res/layout/dialog_confirm_account.xml
+++ b/app/src/main/res/layout/dialog_confirm_account.xml
@@ -210,7 +210,8 @@
             android:gravity="center"
             android:text="@string/confirm"
             android:textColor="@color/white"
-            android:textSize="@dimen/ts_btn" />
+            android:textSize="@dimen/ts_btn"
+            android:textStyle="bold" />
     </FrameLayout>
 
 </LinearLayout>
