--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -99,7 +99,7 @@
         android:layout_gravity="right|end"
         android:layout_marginRight="50dp"
         android:layout_marginTop="12dp"
-        android:text="找回密码"
+        android:text="@string/retrieve_password"
         android:textColor="@color/text_green_color"
         android:textSize="12sp" />
 
@@ -124,7 +124,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:text="验证码登录"
+        android:text="@string/login_verification_code"
         android:textColor="@color/text_color"
         android:textSize="13sp" />
 
