--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="30dp"
-        android:text="重置密码"
+        android:text="@string/reset_password"
         android:textColor="@color/text_color"
         android:textSize="28sp" />
 
@@ -144,7 +144,7 @@
         android:background="@mipmap/btn_full_normal"
         android:enabled="false"
         android:gravity="center"
-        android:text="完成"
+        android:text="@string/complete"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
