--- a/app/src/main/res/layout/item_payments_history.xml
+++ b/app/src/main/res/layout/item_payments_history.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.cn.lib.widget.card.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cn.lib.widget.shadowlayout.ShadowLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
+    android:paddingBottom="20dp"
+    android:paddingTop="20dp"
+    app:l_radius="5dp"
+    app:l_shadowAlpha="0.2"
+    app:l_shadowElevation="5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
-    android:layout_marginTop="10dp"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="8dp">
+    android:layout_marginTop="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -154,4 +157,4 @@
                 android:textSize="@dimen/ts_content" />
         </LinearLayout>
     </LinearLayout>
-</com.cn.lib.widget.card.CardView>
+</com.cn.lib.widget.shadowlayout.ShadowLinearLayout>
