--- a/app/src/main/res/layout/layout_add_account.xml
+++ b/app/src/main/res/layout/layout_add_account.xml
@@ -1,52 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.cn.lib.widget.card.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cn.lib.widget.shadowlayout.ShadowRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="8dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginRight="20dp"
+    android:layout_marginBottom="8dp"
     android:layout_marginLeft="20dp"
-    android:layout_marginBottom="10dp">
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="8dp"
+    android:background="@color/white"
+    app:l_radius="5dp"
+    app:l_shadowAlpha="0.2"
+    app:l_shadowElevation="5dp">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingBottom="38dp"
-            android:paddingTop="38dp">
-
-            <ImageView
-                android:id="@+id/image_add"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/add_account" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="11dp"
-                android:text="新增账户"
-                android:textColor="@color/text_color"
-                android:textSize="14sp" />
-
-        </LinearLayout>
-
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingBottom="40dp"
+        android:paddingTop="40dp">
 
         <ImageView
+            android:id="@+id/image_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="37dp"
-            android:src="@mipmap/background_person" />
+            android:src="@mipmap/add_account" />
 
-    </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="11dp"
+            android:text="新增账户"
+            android:textColor="@color/text_color"
+            android:textSize="14sp" />
 
-</com.cn.lib.widget.card.CardView>
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="37dp"
+        android:src="@mipmap/background_person" />
+
+</com.cn.lib.widget.shadowlayout.ShadowRelativeLayout>
