--- a/app/src/main/res/layout/layout_first_into.xml
+++ b/app/src/main/res/layout/layout_first_into.xml
@@ -2,11 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="10dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="10dp">
 
-    <include layout="@layout/layout_first_recharge"/>
-    <include android:id="@+id/layout_add_account" layout="@layout/layout_add_account"/>
-    <include layout="@layout/layout_function_development"/>
+    <include layout="@layout/layout_first_recharge" />
+
+    <include layout="@layout/layout_add_account"
+        android:id="@+id/layout_add_account"/>
+
+    <include
+        layout="@layout/layout_function_development" />
 
 </LinearLayout>
