--- a/app/src/main/res/layout/layout_first_recharge.xml
+++ b/app/src/main/res/layout/layout_first_recharge.xml
@@ -1,53 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.cn.lib.widget.card.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cn.lib.widget.shadowlayout.ShadowLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="8dp"
-    android:layout_marginTop="20dp"
-    android:layout_marginRight="20dp"
+    android:layout_marginBottom="8dp"
     android:layout_marginLeft="20dp"
-    android:layout_marginBottom="10dp">
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="8dp"
+    android:background="@color/white"
+    android:paddingBottom="20dp"
+    android:paddingTop="20dp"
+    app:l_radius="5dp"
+    app:l_shadowAlpha="0.2"
+    app:l_shadowElevation="5dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp">
+        android:layout_marginBottom="6dp"
+        android:layout_marginTop="6dp"
+        android:src="@mipmap/side_hint_highlight" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
-            android:layout_marginTop="6dp"
-            android:src="@mipmap/side_hint_highlight" />
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="20dp"
+        android:layout_weight="1"
+        android:text="@string/iot_card"
+        android:textColor="@color/text_color"
+        android:textSize="20sp" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="1"
-            android:text="@string/iot_card"
-            android:textColor="@color/text_color"
-            android:textSize="20sp" />
+    <TextView
+        android:id="@+id/btn_recharge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="15dp"
+        android:background="@mipmap/btn_recharge"
+        android:gravity="center"
+        android:text="@string/recharge"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/btn_recharge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginRight="15dp"
-            android:background="@mipmap/btn_recharge"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:text="充值"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
-
-    </LinearLayout>
-</com.cn.lib.widget.card.CardView>
+</com.cn.lib.widget.shadowlayout.ShadowLinearLayout>
