--- a/app/src/main/res/layout/layout_function_development.xml
+++ b/app/src/main/res/layout/layout_function_development.xml
@@ -1,40 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.cn.lib.widget.card.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cn.lib.widget.shadowlayout.ShadowLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="8dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginRight="20dp"
     android:layout_marginLeft="20dp"
-    android:layout_marginBottom="20dp">
+    android:layout_marginRight="20dp"
+    android:background="@color/white"
+    android:paddingBottom="20dp"
+    android:paddingTop="20dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginTop="8dp"
+    app:l_radius="5dp"
+    app:l_shadowAlpha="0.2"
+    app:l_shadowElevation="5dp">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp">
+        android:layout_marginBottom="6dp"
+        android:layout_marginTop="6dp"
+        android:src="@mipmap/side_hint" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
-            android:layout_marginTop="6dp"
-            android:src="@mipmap/side_hint" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="57dp"
+        android:text="其他功能正在开发中，敬请期待"
+        android:textColor="@color/text_gray_color"
+        android:textSize="14sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="57dp"
-            android:text="其他功能正在开发中，敬请期待"
-            android:textColor="@color/text_gray_color"
-            android:textSize="14sp" />
 
-    </LinearLayout>
-
-</com.cn.lib.widget.card.CardView>
+</com.cn.lib.widget.shadowlayout.ShadowLinearLayout>
